2016-05-23  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/utils/__init__.py:

	Added class to provide a simple time profiling utility.

2016-05-20  Gerrit Holl  <g.holl@reading.ac.uk>:

	* typhon/utils/cache.py: Bugfix

	- Now I realise why functools.lru_cache refuses to cache mutable
	results... duh!  The mutable result gets altered earlier or later, so
	it's not an actual cache of the object.  As a workaround (I still want
	to cache it!) I'm caching a copy.

	* typhon/datasets/dataset.py: Bugfix

	- Something was going disastrously wrong in find_granules_sorted.  It
	doesn't seem to go nearly as disastrously wrong now.  It might even be
	miraculously correct.

2016-05-20  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/stylelib/typhon.mplstyle:

	Changed default mathtext font.

2016-05-17  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: Set DEVBUILD back to True after release.

2016-05-17  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: 0.3.0 Release.

	* setup.py: Change dev status to '4 - Beta'.

2016-05-17  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/utils/__init.py__:

	Added function extract_block_diag() to extract blocks around the
	diagonal of a square matrix.

2016-05-11  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/xml/__init__.py:

	Added keyword argument 'comment' to save() function. A string passed as
	comment is included within a comment tag at the top of the XML file.

	* typhon/arts/xml/write.py:

	Implemented function write_comment() to write strings into a comment tag.

2016-05-11  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/xml/read.py: Fixed the handling of comments.

	Comment tags are now handled properly. If a XML file contains a comment
	only None is returned. Comments within a file storing actual data are
	ignored.

	* typhon/arts/xml/tests/test_matpack_types.py:

	Added two test cases to check the handling of comments in XML files.
