@@ -1,3 +1,11 @@
+2016-06-03  Gerrit Holl  <g.holl@reading.ac.uk>
+
+	* typhon/datasets/dataset.py: Added capability to skip the first
+	several lines of a granule, if they are contained in the previous one.
+	Note that this is not always the correct method; sometimes the quality
+	of either one is better.  Ideally, what granule to take a scanline
+	from should be chosen on a case-by-case basis.
+
 2016-05-23  Lukas Kluft  <lukas.kluft@gmail.com>
 
 	* typhon/utils/__init__.py:
